@@ -1,7 +1,7 @@
 {
   "name": "Builder",
   "description": "The Builder is a very versatile block to build, quarry, or collect",
-  "parent": "rftoolsbuilder:category_rftoolsbuilder",
+  "parent": "rftoolsbase:category_rftoolsbuilder",
   "icon": "rftoolsbuilder:builder",
   "sortnum": 20
 }
