@@ -1,7 +1,7 @@
 {
   "name": "Shape Cards",
   "description": "Shape Cards are items that represent a certain shape. They can be used by the Builder and the Shield Projector",
-  "parent": "rftoolsbuilder:category_rftoolsbuilder",
+  "parent": "rftoolsbase:category_rftoolsbuilder",
   "icon": "rftoolsbuilder:shape_card_def",
   "sortnum": 10
 }
