@@ -1,7 +1,7 @@
 {
   "name": "Shield Projector",
   "description": "The Shield Projector can protect areas as well as kill mobs",
-  "parent": "rftoolsbuilder:category_rftoolsbuilder",
+  "parent": "rftoolsbase:category_rftoolsbuilder",
   "icon": "rftoolsbuilder:shield_block1",
   "sortnum": 30
 }
