@@ -1,7 +1,7 @@
 {
   "name": "Targetting",
   "icon": "minecraft:compass",
-  "category": "rftoolsbuilder:category_rftoolsbuilder_builder",
+  "category": "rftoolsbase:category_rftoolsbuilder_builder",
   "sortnum": 20,
   "pages": [
     {
