@@ -1,7 +1,7 @@
 {
   "name": "Quarry Card",
   "icon": "rftoolsbuilder:shape_card_quarry",
-  "category": "rftoolsbuilder:category_rftoolsbuilder_shape_cards",
+  "category": "rftoolsbase:category_rftoolsbuilder_shape_cards",
   "sortnum": 20,
   "pages": [
     {
