@@ -1,7 +1,7 @@
 {
   "name": "Pump Card",
   "icon": "rftoolsbuilder:shape_card_pump",
-  "category": "rftoolsbuilder:category_rftoolsbuilder_shape_cards",
+  "category": "rftoolsbase:category_rftoolsbuilder_shape_cards",
   "sortnum": 50,
   "pages": [
     {
