@@ -1,7 +1,7 @@
 {
   "name": "Introduction",
   "icon": "minecraft:experience_bottle",
-  "category": "rftoolsbuilder:category_rftoolsbuilder_shield",
+  "category": "rftoolsbase:category_rftoolsbuilder_shield",
   "sortnum": 10,
   "pages": [
     {
