@@ -1,4 +1,0 @@
-{
-  "name": "Technology Guide",
-  "extend": "rftoolsbase:manual"
-}    
